# tcib

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .pylintrc  .stestr.conf  AUTHORS  HACKING.rst  OWNERS  OWNERS_ALIASES  README.md  README.rst  containers.yaml  requirements.txt  setup.cfg  tcib-dev-env.rc  test-requirements.txt  tox.ini
.github/workflows/: toxjobs.yml
ci/playbooks/: build_zed_containers.yaml
container-images/: containers.yaml  tripleo_containers.yaml
container-images/kolla/base/: copy_cacerts.sh  httpd_setup.sh  set_configs.py  start.sh  sudoers  uid_gid_manage.sh
container-images/kolla/cinder-backup/: cinder-backup-sudoers  extend_start.sh
container-images/kolla/horizon/: extend_start.sh
healthcheck/: README.md  aodh-api  aodh-evaluator  aodh-listener  aodh-notifier  barbican-api  barbican-keystone-listener  barbican-worker  ceilometer-agent-ipmi  ceilometer-agent-notification  cinder-api  cinder-backup  cinder-scheduler  cinder-volume  common.sh  frr  glance-api  gnocchi-api  gnocchi-metricd  gnocchi-statsd  heat-api  heat-api-cfn  heat-engine  horizon  ironic-api  ironic-conductor  ironic-inspector  ironic-neutron-agent  ironic-pxe  keystone  manila-api  manila-scheduler  manila-share  mariadb  memcached  multipathd  neutron-api  neutron-dhcp  neutron-l3  neutron-metadata  (+23 more)
roles/: build_containers
tcib/: __init__.py
tcib/builder/: base.py  buildah.py
tcib/client/: command.py  container_image.py  plugin.py  utils.py
tcib/tests/: test_buildah.py  test_container_image.py
tcib/utils/: process.py
zuul.d/: job.yaml  projects.yaml
(+140 files in other folders)
