[metadata]
name = tcib
summary = A library for container build.
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    tcib

data_files =
    /usr/share/tcib/container-images = container-images/*
    /usr/share/tcib/healthcheck = healthcheck/*
    /usr/share/ansible/roles/ = roles/*

[entry_points]
openstack.cli.extension =
    tcib = tcib.client.plugin
openstack.tcib.v1 =
    tcib_container_image_build = tcib.client.container_image:Build
    tcib_container_image_hotfix = tcib.client.container_image:HotFix

[tool:pytest]
norecursedirs = .eggs .git .tox dist
log_cli = true

[flake8]
show-source = True
# E123, E125 skipped as they are invalid PEP-8.
# W504/W503 are mutually exclusive and we should avoid them until community
# will pick a winner.
ignore = E123,E125,W503,W504
exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,releasenotes
builtins = _

[pycodestyle]
exclude = .eggs,.tox
